--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 <body>
 
 <div class='gameControlWindow'>
-  <label for="game">How Big game You want ?</label>
-  <select id="game">
-    <option value="0">Change Value</option>
-    <option value="16">4 X 4</option>
-    <option value="24">6 X 4</option>
-    <option value="36">6 X 6</option>
-  </select>
-  <button class='btnStartGame'>start</button>
-  <button class='btnResetGame'>reset</button>
+  <div class="buttonsAndSelect">
+    <label for="game">How Big game You want ?</label>
+    <select id="game">
+      <option value="0">Change Value</option>
+      <option value="16">4 X 4</option>
+      <option value="24">6 X 4</option>
+      <option value="36">6 X 6</option>
+    </select>
+    <button class='btnStartGame'>start</button>
+    <button class='btnResetGame'>reset</button>
+  </div>
+  <div class="counter"></div>
 </div>
+
 
   <div class="memoryGameWindow"></div>
 
