--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='preload' href='script.js' as='script'>
   <link rel="stylesheet" href="style.css">
   <title>Memo</title>
 </head>
