--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='preload' href='script.js' as='script'>
   <link rel="stylesheet" href="style.css">
   <title>Memo</title>
 </head>
@@ -22,12 +21,14 @@
     <button class='btnResetGame'>reset</button>
   </div>
   <div class="counter"></div>
+  <div class='lastGameCounter'></div>
 </div>
 
+<div class="memoryGameWindow"></div>
+<div class='popupWindow'></div>
 
-  <div class="memoryGameWindow"></div>
 
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
