--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <button class='btnResetGame'>reset</button>
   </div>
   <div class="counter"></div>
+  <div class="timer"></div>
   <div class='lastGameCounter'></div>
+  <div class='lastGameTimer'></div>
 </div>
 
 <div class="memoryGameWindow"></div>
